force-app/main/default/objects/Session_SMILE__c/Session_SMILE__c.object-meta.xml
<CustomObject>
    <description>Matérialise la session de formation</description>
    <label>Session formation SMILE</label>
    <nameField>
        <label>Nom de SESSION</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions formation SMILE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>