force-app/main/default/objects/Session_SMILE__c/fields/Base_cole_Demande_de_clone__c.field-meta.xml
<CustomField>
    <fullName>Base_cole_Demande_de_clone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Base école - Demande de clone</label>
    <type>Checkbox</type>
</CustomField>