force-app/main/default/objects/Session_SMILE__c/fields/Cible__c.field-meta.xml
<CustomField>
    <fullName>Cible__c</fullName>
    <label>Cible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conseillers</fullName>
            </value>
            <value>
                <fullName>Managers</fullName>
            </value>
            <value>
                <fullName>Conseillers et managers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>