force-app/main/default/objects/Session_SMILE__c/fields/Date_de_la_session_pr_visionnelle__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_session_pr_visionnelle__c</fullName>
    <description>Date à laquelle la session est effectivement réalisée</description>
    <label>Date de la session (prévisionnelle)</label>
    <type>Date</type>
</CustomField>