force-app/main/default/objects/Session_SMILE__c/fields/Date_de_la_session_reelle__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_session_reelle__c</fullName>
    <description>Date réelle</description>
    <label>Date de la session (réelle)</label>
    <type>Date</type>
</CustomField>