force-app/main/default/objects/Session_SMILE__c/fields/Date_fin_de_la_session_r_elle__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_de_la_session_r_elle__c</fullName>
    <formula>Date_de_la_session_reelle__c  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de fin de session (réelle)</label>
    <type>Date</type>
</CustomField>