force-app/main/default/objects/Session_SMILE__c/fields/Date_fin_session_prev__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_session_prev__c</fullName>
    <formula>Date_de_la_session_pr_visionnelle__c  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de fin de session (prévisionnelle)</label>
    <type>Date</type>
</CustomField>