force-app/main/default/objects/Session_SMILE__c/fields/ID_de_la_Session__c.field-meta.xml
<CustomField>
    <fullName>ID_de_la_Session__c</fullName>
    <displayFormat>S-{000}</displayFormat>
    <label>ID de la Session</label>
    <type>AutoNumber</type>
</CustomField>