force-app/main/default/objects/Session_SMILE__c/fields/Logistique_session__c.field-meta.xml
<CustomField>
    <fullName>Logistique_session__c</fullName>
    <description>Informations sur Salle etc.</description>
    <label>Logistique session</label>
    <type>TextArea</type>
</CustomField>