force-app/main/default/objects/Session_SMILE__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Socle, Gestes simples, Acquisition, Résiliation</fullName>
            </value>
            <value>
                <fullName>Compléments Acquisition</fullName>
            </value>
            <value>
                <fullName>Compléments Résiliation</fullName>
            </value>
            <value>
                <fullName>Facturation</fullName>
            </value>
            <value>
                <fullName>Compléments Facturation</fullName>
            </value>
            <value>
                <fullName>Tableau de bord et pilotage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>