force-app/main/default/objects/Session_SMILE__c/fields/NB_conseiller_r_el__c.field-meta.xml
<CustomField>
    <fullName>NB_conseiller_r_el__c</fullName>
    <label>NB conseiller (réel)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>