force-app/main/default/objects/Session_SMILE__c/fields/Nb_managers_r_el__c.field-meta.xml
<CustomField>
    <fullName>Nb_managers_r_el__c</fullName>
    <label>Nb managers (réel)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>