force-app/main/default/objects/Session_SMILE__c/fields/Nom_du_formateur__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_formateur__c</fullName>
    <label>Nom du formateur</label>
    <length>59</length>
    <type>Text</type>
</CustomField>