force-app/main/default/objects/Session_SMILE__c/fields/Nombre_de_participants__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_participants__c</fullName>
    <label>Nombre de participants</label>
    <summaryFilterItems>
        <field>Participants__c.Statut_de_pr_sence__c</field>
        <operation>equals</operation>
        <value>Présent</value>
    </summaryFilterItems>
    <summaryForeignKey>Participants__c.SESSION_MDR__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>