force-app/main/default/objects/Session_SMILE__c/fields/Prestataire__c.field-meta.xml
<CustomField>
    <fullName>Prestataire__c</fullName>
    <label>Prestataire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prestataire</valueSetName>
    </valueSet>
</CustomField>