force-app/main/default/objects/Session_SMILE__c/fields/R_f_rence_Env_Base_Ecole__c.field-meta.xml
<CustomField>
    <fullName>R_f_rence_Env_Base_Ecole__c</fullName>
    <label>Référence Env. Base école</label>
    <length>100</length>
    <type>Text</type>
</CustomField>