force-app/main/default/objects/Session_SMILE__c/fields/RQF__c.field-meta.xml
<CustomField>
    <fullName>RQF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nom du RQF</description>
    <label>Référent - RQF</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SESSIONS_Test</relationshipName>
    <type>Lookup</type>
</CustomField>