force-app/main/default/objects/Session_SMILE__c/fields/Statut_de_la_session__c.field-meta.xml
<CustomField>
    <fullName>Statut_de_la_session__c</fullName>
    <label>Statut de la session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non planifiée</fullName>
            </value>
            <value>
                <fullName>Planifiée</fullName>
            </value>
            <value>
                <fullName>Réalisée</fullName>
            </value>
            <value>
                <fullName>Annulée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>