force-app/main/default/objects/Session_SMILE__c/fields/Staut_Env_Session__c.field-meta.xml
<CustomField>
    <fullName>Staut_Env_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Base école - Env de Session disponible</label>
    <type>Checkbox</type>
</CustomField>